fix: modals visible on all screens

--- a/client/src/stylesheets/game/modals/ModalController.scss
+++ b/client/src/stylesheets/game/modals/ModalController.scss
@@ -1,10 +1,13 @@
 .c-modal-controller {
   height: 100vh;
   width: 100vw;
+  // height: 50rem;
+  // width: 60rem;
+
   position: absolute;
   z-index: 4;
-  top: 0;
-  left: 0;
+  // top: 0;
+  // left: 0;
   @include make-center;
   background-color: rgba(30, 34, 35, 0.8);
 
